<resources>
    <string name="app_name">BackgroundSample</string>
    <string name="thread">Thread</string>
    <string name="asynctask">AsyncTask</string>
    <string name="intentservice">IntentService</string>
    <string name="rxjava">RxJava</string>
    <string name="rxjava_kotlin">RxJava Kotlin</string>
    <string name="kotlin_coroutines">Kotlin Coroutines</string>

    <string name="calulating">calulating</string>
    <string name="calulate_finish">caculate finish , result = xxx </string>

    <string name="set_sleep_time">Set sleep time</string>
    <string name="seconds">Seconds</string>
    <string name="save">Save</string>
    <string name="title_activity_rx_java_kotlin">RxJavaKotlinActivity</string>
</resources>
