<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_sleep_time"
            />

        <EditText
            android:id="@+id/edit_sleep"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center"
            tools:text="3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            />

        <Button
            android:id="@+id/btn_set_sleep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btn_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/thread"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/btn_asynctask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/asynctask"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/btn_intentservice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/intentservice"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/btn_rxjava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/rxjava"
                android:textAllCaps="false"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>